    * 0158 FIX: dell_om_disks: Handle hotspares more correctly

    Multisite:
    * 0779 Hostgroups (Summary): Empty hostgroups are no longer shown (can be re-enabled by filter)
    * 0887 Add new column painter "Host Notifications Enabled"...
    * 0963 New snapin with virtual host trees...
    * 0905 FIX: Multisite context buttons: links in context buttons are no longer called twice...
    * 0906 FIX: Improved transaction handling in Web GUI...
    * 0909 FIX: Table checkboxes: Fixed bug where selected checkboxes got ignored...
    * 0811 FIX: Fixed handling of exceptions occuring before login in debug mode
    * 0912 FIX: Multisite Views: Fixed bug where custom views could not get deleted

    WATO:
    * 0784 Improved security of WATO bulk inventory by using transaction ids
    * 0880 Added support for 389 Directory Server to LDAP connector
    * 0607 online help text for host creation in WATO now also explains hostname caching
    * 0908 Check event state: New option "Less Verbose Output"...
    * 0965 Cumulative permissions and contact groups for WATO folders...
    * 0781 FIX: host diag page: fixed problem with update of diagnose subwindows...
    * 0904 FIX: Fixed exception in host parameter overview...

    Notifications:
    * 0754 Allow users to disable their notifications completely...
    * 0755 Added variables LASTHOSTUP_REL and LASTSERVICEOK_REL to notification context...
    * 0883 Added Date / Time to HTML notification email
    * 0900 notify_multitech.py: new treasures script for notifying via MultiTech SMS Gateway...
    * 0752 FIX: FIX: compute correct state transitions for notifications...
    * 0753 FIX: FIX: correctly show original state in HTML notification mails...
    * 0609 FIX: mail notification script now uses 6 digit hex codes for colors to be better compatible with web based mail browsers
    * 0964 FIX: Fix hanging shutdown of CMC on RedHat 5.X...

    Reporting & Availability: