@@ -69,6 +69,7 @@
     * 0779 Hostgroups (Summary): Empty hostgroups are no longer shown (can be re-enabled by filter)
     * 0887 Add new column painter "Host Notifications Enabled"...
     * 0963 New snapin with virtual host trees...
+    * 0914 Improved transaction handling to speedup the Web-GUI...
     * 0905 FIX: Multisite context buttons: links in context buttons are no longer called twice...
     * 0906 FIX: Improved transaction handling in Web GUI...
     * 0909 FIX: Table checkboxes: Fixed bug where selected checkboxes got ignored...
